fix: remove unneeded dependency